Fix exit warning screen color regression

Bug: 791159
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Idbc8b244d2f39c61eeaccf177cf306e4edc1ba4c
Reviewed-on: https://chromium-review.googlesource.com/804339
Reviewed-by: Ian Vollick <vollick@chromium.org>
Commit-Queue: Ian Vollick <vollick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521166}
Former-commit-id: 9165179ec998c264c5715c1c59f45c5155c23ddd