chrome/browser/vr/elements/ui_texture.cc
@@ -201,6 +201,16 @@ bool UiTexture::GetDefaultFontList(int font_size,
   return GetFontList(kDefaultFontFamily, font_size, text, font_list);
 }
 
+SkColor UiTexture::foreground_color() const {
+  DCHECK(foreground_color_);
+  return foreground_color_.value();
+}
+
+SkColor UiTexture::background_color() const {
+  DCHECK(background_color_);
+  return background_color_.value();
+}
+
 void UiTexture::SetForegroundColor(SkColor color) {
   if (foreground_color_ == color)
     return;
